test/org/midica/testfiles/failing/pattern-call-index-wrong.midica
INCLUDE inc/instruments.midica

PATTERN pat
	0   /4
	1.2 /4
END

0 c,d pat
0 e,f pat
0 c,d pat
